# coral

./: .gitignore  README.md  README.txt  oldmakefile
myrun/: CMakeLists.txt  gausstest.cc
scottdevel/: gausstest.cc  he3test.cc  kpitest.cc  nntest.cc
scottdevel/pd/: CMakeLists.txt  pdmain.cc  pdtester.cc  pdtune.cc
scottdevel/pd/figs/: cf.py  cf_pd_vsR.py  phaseshifts.py  phaseshifts_sum.py  weird.py
scottdevel/pd/phaseshifts/data/D/: delta_2D_32.txt  delta_2D_52.txt  delta_4D_12.txt  delta_4D_32.txt  delta_4D_52.txt  delta_4D_72.txt  deltabar  deltabar.cc  deltabar.txt  phaseshift_vs_Ep_2D_32.json  phaseshift_vs_Ep_2D_52.json  phaseshift_vs_Ep_4D_12.json  phaseshift_vs_Ep_4D_32.json  phaseshift_vs_Ep_4D_52.json  phaseshift_vs_Ep_4D_72.json  qarray.txt
scottdevel/pd/phaseshifts/data/P/: delta_2P_12.txt  delta_2P_32.txt  delta_4P_12.txt  delta_4P_32.txt  delta_4P_52.txt  deltabar  deltabar.cc  deltabar.txt  phaseshift_vs_Ep_2P_12.json  phaseshift_vs_Ep_2P_32.json  phaseshift_vs_Ep_4P_12.json  phaseshift_vs_Ep_4P_32.json  phaseshift_vs_Ep_4P_52.json  qarray.txt
scottdevel/pd/phaseshifts/data/S/: delta_2S_12.txt  delta_4S_32.txt  deltabar.txt  phaseshift_vs_Ep_2S_12.json  phaseshift_vs_Ep_4S_32.json  qarray.txt  qfinder  qfinder.cc
scottdevel/pd/results/: Rinv3_noint.txt  Rinv3_spdwaves.txt  Rinv3_spwaves.txt  Rinv3_swaves.txt
scottrun/: CMakeLists.txt  gausstest  gausstest.cc  he3test.cc
software/: CMakeLists.txt
software/include/: cfcalc.h  coral.h  kernel.h  minimization.h  sf.h  sfit.h  sfit_minuit.h  source2cf.h  sourcecalc.h  wavefunction.h  xgraph.h
software/include/msu_coral/: cfcalc.h  coral.h  kernel.h  minimization.h  sfit.h  sfit_minuit.h  source2cf.h  sourcecalc.h  wavefunction.h  xgraph.h
software/include_defunct/: arrays.h  coralutils.h  misc.h  parametermap.h  randy.h
software/lib/: .placeholder
software/src/CF2Source/: minimization.cc  sfit.cc  sfit_3dgaussian.cc  sfit_GX1d.cc  sfit_blast.cc
software/src/CFCalc/: cfcalc.cc
software/src/Kernel/: kernel.cc
software/src/Source2CF/: source2cf.cc
software/src/SourceCalc/: sourcecalc.cc  sourcecalc_GX1d.cc  sourcecalc_OSCAR.cc  sourcecalc_OSCAR_multibin.cc  sourcecalc_blast.cc  sourcecalc_ellipticblast.cc  sourcecalc_gauss.cc  sourcecalc_getgausspars.cc
software/src/WaveFunctions/wf/: wf_Kd_sqwell.cc  wf_Kminusd_sqwell.cc  wf_Xipi_phaseshift.cc  wf_classical.cc  wf_generic.cc  wf_kpluspiminus_phaseshift.cc  wf_kpluspiminus_sqwell.cc  wf_kpluspiplus_sqwell.cc  wf_lambdalambda_phaseshift.cc  wf_lambdalambdaantiparspin_phaseshift.cc  wf_lambdalambdaparspin_phaseshift.cc  wf_nn_phaseshift.cc  wf_nn_schrod.cc  wf_optical.cc  wf_pHe3_sqwell.cc  wf_pd_sqwell.cc  wf_pd_tune.cc  wf_pid_sqwell.cc  wf_pipluspiminus_nostrong.cc  wf_pipluspiminus_phaseshift.cc  wf_pipluspiminus_sqwell.cc  wf_pipluspiplus_nostrong.cc  wf_pipluspiplus_phaseshift.cc  wf_pipluspiplus_sqwell.cc  wf_pkplus_phaseshift.cc  wf_pkplus_sqwell.cc  wf_plambda_phaseshift.cc  wf_pn_phaseshift.cc  wf_pp_phaseshift.cc  wf_pp_schrod.cc  wf_ppbar_nocoulomb.cc  wf_ppiminus_sqwell.cc  wf_ppiplus_phaseshift.cc  wf_ppiplus_sqwell.cc
software/src/WaveFunctions/wfcommon/: kpi_phaseshifts.cc  partwave.cc  pipi_phaseshifts.cc  planewave.cc  reid93.cc  wfcommon.cc  wfsquarewell.cc
software/src_defunct/: kernel_chooser.cc  scott_sfit.cc  sourcecalc_HDF5.cc  sourcecalc_HDF5_multibin.cc  wf_pd_sqwell.cc
software/src_defunct/minuitstuff/: sfit_minuit.cc  sfit_minuit_3dgaussian.cc  sfit_minuit_GX1d.cc  sfit_minuit_blast.cc
software/src_defunct/xgraph/: xgraph.cc  xtester.cc
